# 2025-europar-llm

./: .editorconfig  .gitignore  LICENCE  README.md  process-results.sh
framework/: .gitignore  README.md  _a100.run.sh  _b40.run.sh  _h100.run.sh  _v100.run.sh  print-graph.config.json  print-graph.py  requirements.txt  run-experiments.py
framework/knn/: CMakeLists.txt  Makefile
framework/knn/include/: knn.hpp
framework/knn/reference/baseline/: code.cu
framework/knn/reference/baseline-warps/: code.cu
framework/knn/reference/naive/: code.cu
framework/knn/src/: baseline.cu  knn.cu  main.cpp
gpt-querying/: README.md  main.py  requirements.txt
interactive-scenarios/: game-of-life.md  histogram-notes.md  histogram.md  knn.md
measured-times/: filter_knn_both_valid.py  generate_all_graphs.sh  gol-ampere.csv  gol-ampere.reference.csv  gol-blackwell.csv  gol-blackwell.reference.csv  gol-hopper.csv  gol-hopper.reference.csv  gol-volta.csv  gol-volta.reference.csv  histogram-hexdump-ampere.csv  histogram-hexdump-ampere.reference.csv  histogram-hexdump-blackwell.csv  histogram-hexdump-blackwell.reference.csv  histogram-hexdump-hopper.csv  histogram-hexdump-hopper.reference.csv  histogram-hexdump-volta.csv  histogram-hexdump-volta.reference.csv  histogram-loremipsum-ampere.csv  histogram-loremipsum-ampere.reference.csv  histogram-loremipsum-blackwell.csv  histogram-loremipsum-blackwell.reference.csv  histogram-loremipsum-hopper.csv  histogram-loremipsum-hopper.reference.csv  histogram-loremipsum-volta.csv  histogram-loremipsum-volta.reference.csv  knn-1024-ampere.csv  (+16 more)
(+557 files in other folders)
